keep adding home pages

--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ title: Dina Mistry
 
 		<div class="blurb">
 			<h1>Dina Mistry</h1>
-			<p><em>Doctoral Candidate in Physics & Network Science</em>.<a href="/about">Read more about my life...</a></p>
+			<p><em>Doctoral Candidate in Physics & Complex Networks</em>. <a href="/about">Read more about my life...</a></p>
 		</div> 
