adding publications and color

--- a/about/index.html
+++ b/about/index.html
@@ -1,15 +1,18 @@
 ---
 layout: default
-title: About Hank Quinlan
+title: About Dina Mistry
 ---
 
 		<div class="about">
 			<h1>About</h1>
-			<p>You can optionally insert a brief bio here. You went to this school, you studied that, you now work in this field with research interests in that subject. At your previous position at this place, you worked on this or that. You can list some of your significant accomplishments, awards, or recognition here as well. You live in this city with these animals and people. In your free time you like X, Y, and Z.</p>
+			<h6>I am a Doctoral Candidate in Physics at Northeastern University in the MOBS Lab situated within the Network Science Institute. 
+			My dissertation work has focused on complex networks and infectious disease modeling. I also have a M.Sc in Physics from Northeastern University. Previous to this I obtained my Hons. B.Sc with high distinction in Astronomy & Physics at the University of Toronto, Canada.</h6>
+			<h6>My research interests lie at the intersection of complex networks and data science for social good & public health.</h6>
+			<h5> In another life, I played the tenor and double tenor steel pans in various bands and music remains a passion of my life.</h5>
 
 			<ul class="contacts">
-				<li><a href="#">@TwitterHandle</a></li>
-				<li><a href="#">Your Departmental Webpage</a></li>
-				<li><a href="#">Another site you want to link to</a></li>
+				<li><a href="https://twitter.com/dinacmistry"><h7>@dinacmistry</h7></a></li>
+				<li><a href="https://www.mobs-lab.org/"><h7>MOBS Lab</h7></a></li>
+				<li><a href="https://www.networkscienceinstitute.org/"><h7>Network Science Institute</h7></a></li>
 				</ul>
 		</div>
