--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ title: Dina Mistry
 
 		<div class="blurb">
 			<h1>Dina Mistry</h1>
-			<p><em>Doctoral Candidate in Physics & Complex Networks</em>. <a href="/about">Read more about my life...</a></p>
+			<p>Doctoral Candidate in Physics & Complex Networks. <a href="/about"><h7>Read more about my life...</h7></a></p>
 		</div> 
