--- a/about/index.html
+++ b/about/index.html
@@ -11,8 +11,8 @@ title: About Dina Mistry
 			<h4> In another life, I played the tenor and double tenor steel pans in various bands and music remains a passion of my life.</h4>
 
 			<ul class="contacts">
-				<li><a href="https://twitter.com/dinacmistry"><h6>@dinacmistry</h6></a></li>
-				<li><a href="https://www.mobs-lab.org/"><h6>MOBS Lab</h6></a></li>
-				<li><a href="https://www.networkscienceinstitute.org/"><h6>Network Science Institute</h6></a></li>
+				<li><a href="https://twitter.com/dinacmistry"><font color='#0099cc'>@dinacmistry</font></a></li>
+				<li><a href="https://www.mobs-lab.org/"><font color='#0099cc'>MOBS Lab</font></a></li>
+				<li><a href="https://www.networkscienceinstitute.org/"><font color="#0099cc">Network Science Institute</font></a></li>
 				</ul>
 		</div>
