--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ title: Dina Mistry
 
 		<div class="blurb">
 			<h1>Dina Mistry</h1>
-			<p>Doctoral Candidate in Physics & Complex Networks. <a href="/about"><h6>Read more about my life...</h6></a></p>
+			<p>Doctoral Candidate in Physics & Complex Networks. <a href="/about"><font color="#0099cc">Read more about my life...</font></a></p>
 		</div> 
