--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -5,5 +5,7 @@ title: Visualizations Dina Mistry
 
 		<div class="research">
 			<h1>Visualizations</h1>
-			[https://github.com/dinacmistry/contactmatrices/blob/master/matrices/Maharashtra_CM_85_H.pdf?raw=true]
+			<!-- ![useful image]({{ site.url }}/visualizations/Maharashtra_CM_85_H.pdf) -->
+			<!-- [https://github.com/dinacmistry/contactmatrices/blob/master/matrices/Maharashtra_CM_85_H.pdf?raw=true] -->
+			<pdf> ({{ site.url }}/visualizations/Maharashtra_CM_85_H.pdf) </pdf>
 		</div>
