--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -5,7 +5,8 @@ title: Visualizations Dina Mistry
 
 		<div class="research">
 			<h1>Visualizations</h1>
-			<!-- ![useful image]({{ site.url }}/visualizations/Maharashtra_CM_85_H.pdf) -->
+			<!-- ({{ site.url }}/visualizations/Maharashtra_CM_85_H.pdf) -->
+			<img src="{{ site.url }}/visualizations/Maharashtra_CM_85_H.pdf">
 			<!-- [https://github.com/dinacmistry/contactmatrices/blob/master/matrices/Maharashtra_CM_85_H.pdf?raw=true] -->
 			<!-- <pdf> ({{ site.url }}/visualizations/Maharashtra_CM_85_H.pdf) </pdf> -->
 		</div>
