--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -5,8 +5,15 @@ title: Visualizations Dina Mistry
 
 		<div class="research">
 			<h1>Visualizations</h1>
+
+			<p>
+				<img src="../visualizations/indenticon.png">
+				<!-- ![Alt Text]({{ site.url }}/visualizations/indenticon.png) -->
+				<!-- <img src="{{ site.url }}/visualizations/indenticon.png" style="width: 300px; height: 200px; "> -->
+			</p>
+
 			<!-- ({{ site.url }}/visualizations/Maharashtra_CM_85_H.pdf) -->
-			<img src="{{ site.url }}/visualizations/Maharashtra_CM_85_H.pdf">
+			<!-- <img src="{{ site.url }}/visualizations/indenticon.png"> -->
 			<!-- [https://github.com/dinacmistry/contactmatrices/blob/master/matrices/Maharashtra_CM_85_H.pdf?raw=true] -->
 			<!-- <pdf> ({{ site.url }}/visualizations/Maharashtra_CM_85_H.pdf) </pdf> -->
 		</div>
