--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -6,11 +6,12 @@ title: Visualizations Dina Mistry
 		<div class="research">
 			<h1>Visualizations</h1>
 
-			<p>
-				<img src="../visualizations/indenticon.png">
+			<a href="{{ https://github.com/dinacmistry/dinacmistry.github.io/blob/master }}/assets/indenticon.png">k</a>
+			![my indenticon]({{ site.baseurl }}/assets/indenticon.png)
+			<!-- {{ site.url }}/visualizations/indenticon.png -->
 				<!-- ![Alt Text]({{ site.url }}/visualizations/indenticon.png) -->
 				<!-- <img src="{{ site.url }}/visualizations/indenticon.png" style="width: 300px; height: 200px; "> -->
-			</p>
+			
 
 			<!-- ({{ site.url }}/visualizations/Maharashtra_CM_85_H.pdf) -->
 			<!-- <img src="{{ site.url }}/visualizations/indenticon.png"> -->
