--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -6,8 +6,8 @@ title: Visualizations Dina Mistry
 		<div class="research">
 			<h1>Visualizations</h1>
 
-			<a href="{{ https://github.com/dinacmistry/dinacmistry.github.io/blob/master }}/assets/indenticon.png">k</a>
-			![my indenticon]({{ site.baseurl }}/assets/indenticon.png)
+			<a href="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png">k</a>
+			<img src="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png" style="width: 300px; height: 300px;">
 			<!-- {{ site.url }}/visualizations/indenticon.png -->
 				<!-- ![Alt Text]({{ site.url }}/visualizations/indenticon.png) -->
 				<!-- <img src="{{ site.url }}/visualizations/indenticon.png" style="width: 300px; height: 200px; "> -->
