--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -8,6 +8,7 @@ title: Visualizations Dina Mistry
 
 			<a href="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png">k</a>
 			<img src="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png" style="width: 300px; height: 300px;">
+			<img src="{{ site.url }}/visualizations/indenticon.png" style="width: 400px; height: 300px" class="img-responsive" alt="">
 			<!-- {{ site.url }}/visualizations/indenticon.png -->
 				<!-- ![Alt Text]({{ site.url }}/visualizations/indenticon.png) -->
 				<!-- <img src="{{ site.url }}/visualizations/indenticon.png" style="width: 300px; height: 200px; "> -->
