--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -9,5 +9,9 @@ title: Visualizations Dina Mistry
 			<a href="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png">k</a>
 			<img src="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png" style="width: 300px; height: 300px;">
 			<img src="{{ site.url }}/blob/master/visualizations/indenticon.png" style="width: 400px; height: 300px;">
-			![Sequel Pro Content Tab](/assets/identicon.png)
+			<p>
+				<a href="{{ site.url }}/dinacmistry/dinacmistry.github.io/blob/master/assets/indenticon.png">
+					<img src="{{ site.url }}/dinacmistry/dinacmistry.github.io/raw/master/assets/identicon.png" style="width: 500px;">
+				</a>
+			</p>
 		</div>
