--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -6,13 +6,17 @@ title: Visualizations Dina Mistry
 		<div class="research">
 			<h1>Visualizations</h1>
 
-			<a href="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png">k</a>
-			<img src="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png" style="width: 300px; height: 300px;">
-			<img src="{{ site.url }}/blob/master/visualizations/indenticon.png" style="width: 400px; height: 300px;">
+			<!-- <a href="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png">k</a> -->
+			<!-- <img src="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png" style="width: 300px; height: 300px;"> -->
+			<!-- <img src="{{ site.url }}/blob/master/visualizations/indenticon.png" style="width: 400px; height: 300px;"> -->
 			<p>
 				<a href="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png">
 					<!-- https://github.com/dinacmistry/dinacmistry.github.io/blob/master/visualizations/identicon.png -->
-					<img src="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png" style="width: 500px;">
+					<img src="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png" style="width: 500px; height: 500px">
 				</a>
 			</p>
 		</div>
+		<p>
+		![image-title-here](/assets/identicon.png){:class="img-responsive"}
+		</p>
+
