--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -15,8 +15,14 @@ title: Visualizations Dina Mistry
 					<img src="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png" style="width: 500px; height: 500px">
 				</a>
 			</p>
+			<img src="https://dinacmistry.github.io/assets/identicon.png">
 		</div>
-		<p>
+		<!-- <p> -->
 		![image-title-here](/assets/identicon.png){:class="img-responsive"}
-		</p>
+		<!-- </p> -->
+		<!-- <ul> -->
+			<!-- <li  markdown="1"> -->
+		![Logo Jekyll]({{site.url}}/assets/identicon.png )
 
+			<!-- </li> -->
+		<!-- </ul> -->
