--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -9,20 +9,16 @@ title: Visualizations Dina Mistry
 			<!-- <a href="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png">k</a> -->
 			<!-- <img src="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png" style="width: 300px; height: 300px;"> -->
 			<!-- <img src="{{ site.url }}/blob/master/visualizations/indenticon.png" style="width: 400px; height: 300px;"> -->
-			<p>
+<!-- 			<p>
 				<a href="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png">
-					<!-- https://github.com/dinacmistry/dinacmistry.github.io/blob/master/visualizations/identicon.png -->
+					https://github.com/dinacmistry/dinacmistry.github.io/blob/master/visualizations/identicon.png
 					<img src="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png" style="width: 500px; height: 500px">
 				</a>
-			</p>
+			</p> -->
 			<img src="https://dinacmistry.github.io/assets/identicon.png">
+			<img src="https://dinacmistry.github.io/visualizations/Maharashtra_CM_85_H">
 		</div>
 		<!-- <p> -->
-		![image-title-here](/assets/identicon.png){:class="img-responsive"}
-		<!-- </p> -->
-		<!-- <ul> -->
-			<!-- <li  markdown="1"> -->
-		![Logo Jekyll]({{site.url}}/assets/identicon.png )
 
 			<!-- </li> -->
 		<!-- </ul> -->
