--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -5,18 +5,12 @@ title: Visualizations Dina Mistry
 
 		<div class="research">
 			<h1>Visualizations</h1>
-
-			<!-- <a href="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png">k</a> -->
-			<!-- <img src="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png" style="width: 300px; height: 300px;"> -->
-			<!-- <img src="{{ site.url }}/blob/master/visualizations/indenticon.png" style="width: 400px; height: 300px;"> -->
-<!-- 			<p>
-				<a href="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png">
-					https://github.com/dinacmistry/dinacmistry.github.io/blob/master/visualizations/identicon.png
-					<img src="https://github.com/dinacmistry/dinacmistry.github.io/blob/master/assets/identicon.png" style="width: 500px; height: 500px">
-				</a>
-			</p> -->
-			<img src="https://dinacmistry.github.io/assets/identicon.png">
-			<img src="https://dinacmistry.github.io/visualizations/Maharashtra_CM_85_H">
+			<a href="https://dinacmistry.github.io/visualizations/Maharashtra_CM_85_H.pdf">
+				<img src="https://dinacmistry.github.io/visualizations/Maharashtra_CM_85_H.png" style="width: 400px;">
+			</a>
+			<a href="https://dinacmistry.github.io/visualizations/attack_rates_by_setting_mcmc_beta_and_dropfactor_scenario_all_locations_85.pdf">
+				<img src="https://dinacmistry.github.io/visualizations/attack_rates_by_setting_mcmc_beta_and_dropfactor_scenario_all_locations_85.png" style="width: 400px;">
+			</a>			
 		</div>
 		<!-- <p> -->
 
