--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -16,8 +16,13 @@ title: Visualizations Dina Mistry
 			</a>
 			<a href="https://dinacmistry.github.io/visualizations/attack_rates_by_setting_mcmc_beta_and_dropfactor_scenario_all_locations_85.pdf">
 				<img src="https://dinacmistry.github.io/visualizations/attack_rates_by_setting_mcmc_beta_and_dropfactor_scenario_all_locations_85.png" style="width: 650px;">
-			</a>			
-					
+			</a>	
+			<a href="https://dinacmistry.github.io/visualizations/fig2.png">
+				<img src="https://dinacmistry.github.io/visualizations/fig2.png" style="width: 650px;">
+			</a>					
+			<a href="https://dinacmistry.github.io/visualizations/fig5_flat.pdf">
+				<img src="https://dinacmistry.github.io/visualizations/fig5_flat.png" style="width: 650px;">
+			</a>					
 			
 		</div>
 		<!-- <p> -->
