--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -5,7 +5,7 @@ title: Visualizations Dina Mistry
 
 		<div class="research">
 			<h1>Visualizations</h1>
-			<a href="https://dinacmistry.github.io/visualizations/Maharashtra_CM_85_H.pdf">
+<!-- 			<a href="https://dinacmistry.github.io/visualizations/Maharashtra_CM_85_H.pdf">
 				<img src="https://dinacmistry.github.io/visualizations/Maharashtra_CM_85_H.png" style="width: 400px;">
 			</a>
 			<a href="https://dinacmistry.github.io/visualizations/Maharashtra_CM_85_M.pdf">
@@ -13,7 +13,7 @@ title: Visualizations Dina Mistry
 			</a>
 			<a href="https://dinacmistry.github.io/visualizations/canberra_distance_M_all_locations_dendrogram_85_with_country_colourbar.pdf">
 				<img src="https://dinacmistry.github.io/visualizations/canberra_distance_M_all_locations_dendrogram_85_with_country_colourbar.png" style="width: 400px;">
-			</a>
+			</a> -->
 			<a href="https://dinacmistry.github.io/visualizations/attack_rates_by_setting_mcmc_beta_and_dropfactor_scenario_all_locations_85.pdf">
 				<img src="https://dinacmistry.github.io/visualizations/attack_rates_by_setting_mcmc_beta_and_dropfactor_scenario_all_locations_85.png" style="width: 650px;">
 			</a>	
