--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -17,15 +17,16 @@ title: Visualizations Dina Mistry
 <!-- 			<a href="https://dinacmistry.github.io/visualizations/Maharashtra_CM_85_M.pdf">
 				<img src="https://dinacmistry.github.io/visualizations/Maharashtra_CM_85_M.png" style="width: 400px;">
 			</a> -->			
-			<a href="https://dinacmistry.github.io/visualizations/attack_rates_by_setting_mcmc_beta_and_dropfactor_scenario_all_locations_85.pdf">
-				<img src="https://dinacmistry.github.io/visualizations/attack_rates_by_setting_mcmc_beta_and_dropfactor_scenario_all_locations_85.png" style="width: 650px;">
-			</a>	
-			<a href="https://dinacmistry.github.io/visualizations/fig2.png">
-				<img src="https://dinacmistry.github.io/visualizations/fig2.png" style="width: 650px;">
+	
+			<a href="https://dinacmistry.github.io/visualizations/canberra_distance_M_all_locations_from_reference_location_New_York_85_curl.png">
+				<img src="https://dinacmistry.github.io/visualizations/canberra_distance_M_all_locations_from_reference_location_New_York_85_curl.png" style="width: 650px;">
 			</a>					
 			<a href="https://dinacmistry.github.io/visualizations/fig5_flat.pdf">
 				<img src="https://dinacmistry.github.io/visualizations/fig5_flat.png" style="width: 650px;">
-			</a>					
+			</a>
+			<a href="https://dinacmistry.github.io/visualizations/attack_rates_by_setting_mcmc_beta_and_dropfactor_scenario_all_locations_85.pdf">
+				<img src="https://dinacmistry.github.io/visualizations/attack_rates_by_setting_mcmc_beta_and_dropfactor_scenario_all_locations_85.png" style="width: 650px;">
+			</a>								
 			
 		</div>
 		<!-- <p> -->
