adding cover music network

--- a/research/index.html
+++ b/research/index.html
@@ -21,4 +21,22 @@ title: Research Dina Mistry
 
 			<!-- <h4>Committed activists and the reshaping of status-quo social consensus. D. Mistry, Q. Zhang, N. Perra, A. Baronchelli. <em><a href="https://journals.aps.org/pre/abstract/10.1103/PhysRevE.92.042805"><font color='#0099cc'> Phys. Rev. E. 92, 042805</font></a></em></h4> -->
 
+			<h3>Cover Music Network</h3>
+
+			<h4>This was an independent research project I conducted for PHYS 5116: Complex Networks, a graduate course I took during my PhD at Northeastern University, and taught by Prof. Laszlo Barabasi and Prof. Roberta Sinatra (now of CEU). I'll be adding to the github <a href="https://github.com/dinacmistry/covermusic"><font color = '#0099cc'><b> repo </b></font></a> over time, but for now you should be able to find the slides for my final presentation on the project. 
+
+			So what exactly is this project about?
+
+			As part of the course, we were tasked with finding a network to study and analyze as a sort of hands-on aspect to our Complex Networks course. Being a musician in a former life, I've spent a lot of time thinking about music and something I've always been rather good at is recognizing samples in songs, remembering which songs were actually cover versions, or knowing other odd music facts, like the fact that The Beatles spent a lot of their early career playing long days in various Hamburg clubs, and that quite a lot of their setlists during this time consisted of cover songs. So, when we were given this assignment, it seemed only natural to study a network in a field I was already interested in (in fact I wanted to study a network of samples between songs but another student got to it first!). 
+
+			This project looks at a network of musical artists and groups connected to each other via cover songs, in which links represent one artist or group who has covered the song of another artist or group. The data was scraped from whosampled.com (at the time they didn't have an API BUT use their API/contact them for their data and be respectful). 
+
+			Now, remember how I said that The Beatles played a lot of cover songs in their early career in Hamburg? Well, in today's parlance, The Beatles of the late 1950s era would be viewed as a cover band. However, in my opinion, it's this time they spent playing other songs from more popular artists and honing their own skills as a band which allowed them to develop as musicians and cultivate their own on-stage presence. Surely, being a cover band early on isn't so bad if you end up with success like The Beatles. With this in mind, I wanted to see whether other musicians followed similar paths to success. Or rather, what did other popular artists in the network do? Were they also cover artists, or were they simply the ones whose material were covered? Along the way, I noticed some odd features which seem to be correlated with the introduction of a copyright law in the US and the widespread adoption of Internet use. 
+
+			This project is on hold for now while I complete my Ph.D. in Physics (actually Complex Networks and Computational Epidemiology, but I digress). Feel free to send me a message if you're interested in anything I've shown here or have questions. 
+
+			<a href="https://github.com/dinacmistry/covermusic">
+
+			 </h4>
+
 		</div>
