adding cover music network

--- a/research/index.html
+++ b/research/index.html
@@ -35,7 +35,7 @@ title: Research Dina Mistry
 
 			This project is on hold for now while I complete my Ph.D. in Physics (actually Complex Networks and Computational Epidemiology, but I digress). Feel free to send me a message if you're interested in anything I've shown here or have questions. 
 
-			<a href="https://github.com/dinacmistry/covermusic">
+			<a href="https://github.com/dinacmistry/covermusic"><font color = '#0099cc'><b> Slides for final project</b></font></a>
 
 			 </h4>
 
