adding gephi figures

--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -5,6 +5,9 @@ title: Visualizations Dina Mistry
 
 		<div class="research">
 			<h1>Visualizations</h1>
+			<a href="https://dinacmistry.github.io/visualizations/community_subgraph_0.pdf">
+				<img src="https://dinacmistry.github.io/visualizations/community_subgraph_0.png" style="width: 400px;">
+			</a>
 			<a href="https://dinacmistry.github.io/visualizations/Maharashtra_CM_85_H.pdf">
 				<img src="https://dinacmistry.github.io/visualizations/Maharashtra_CM_85_H.png" style="width: 400px;">
 			</a>
