--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 ---
 layout: default
-title: Dina Mistry
+title: Home
 ---
 
-		<div class="blurb">
-			<h1>Dina Mistry</h1>
-			<p>Doctoral Candidate in Physics & Complex Networks. <a href="/about"><font color="#0099cc">Read more about my life...</font></a></p>
-		</div> 
+        <div class="blurb">
+            <h1>Dina Mistry</h1>
+            <p>Doctoral Candidate in Physics & Complex Networks. <a href="/about"><font color="#0099cc">Read more about my life...</font></a></p>
+        </div>
+
+
+    <div class="docs-section" id="ack">
+    <h4>Acknowledgement</h4>
+    <p>
+    This website uses the website design and template by <a href="https://github.com/msaveski/www_personal">Martin Saveski</a>
+    </p>
