cleaning up text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Personal Webpage
   <p>
   I am a network scientist currently working in the Epidemiology team at the <a href="https://idmod.org/">Institute for Disease Modeling</a>, a part of the <a href="https://www.gatesfoundation.org/What-We-Do/Global-Health/Institute-for-Disease-Modeling">Bill & Melinda Gates Foundation</a>.
 
-  I like studying people and why we do what we do. In particular, I have spent a lot time thinking about how people interact in the physical world and how we can measure and model those interactions.
+  I like studying people  and why we do what we do. In particular, I have spent a lot time thinking about how people interact in the physical world and how we can measure and model those interactions.
   My research has focused on characterizing and modeling the heterogeneity of social contact networks and mobility networks that are linked to the spread of infectious diseases and how this changes our understanding of disease dynamics. 
 
   </p>
@@ -21,7 +21,7 @@ title: Personal Webpage
   our responses are driven 
   <!-- there are -->
   by many factors 
-  to this
+  <!-- to this -->
   beyond rational logic. Fear, risk perception, individual and collective memory, social pressure, cost, and access to or lack of resources, all serve in the mental calculations behind our behavior.
 
 
