--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@ title: Personal Webpage
   During my current postdoctoral position I've been working on aspects of this by modeling human response to disease awareness as a result of social trust and collective memory in social networks, and showing how under the right conditions lessons learned from past epidemics can prevent future outbreaks.
 
   <p>
-    During the current COVID-19 pandemic I have been working with the rest of the IDM Research team to help inform local and global policies to control and mitigate the spread of COVID-19. We are using a combination of compartmental and agent based model of infectious disease to models how proposed strategies might work in the real world and their tradeoffs. You can take a look at our various work on the <a href="https://covid.idmod.org/#/ResearchandReports">IDM Infohub</a>.
+    During the current COVID-19 pandemic I have been working 
+    <!-- as a part of multiple research teams at IDM -->
+    with
+     the rest of the IDM Research team and leading the social contact network modeling
+     <!-- multiple  -->
+     to help inform local and global policies to control and mitigate the spread of COVID-19. We are using a combination of compartmental and agent based model of infectious disease to models how proposed strategies might work in the real world and their tradeoffs. You can take a look at our various work on the <a href="https://covid.idmod.org/#/ResearchandReports">IDM Infohub</a>.
  </p>
 
     <!-- Over the last few years I've been building my philosophy towards research and science. Experience has taught me that there are many ways to answer research questions. My philosophy is to take a fundamentally data-driven approach when it comes to questions about human behavior. Not only can data help to anchor your research questions, but it can also help with interpretation. -->
@@ -43,7 +48,7 @@ title: Personal Webpage
   </p>
 
   <p>
-  Before joining IDM, I was a member of the MOBS Lab in the <a href="https://www.networkscienceinstitute.org/">Network Science Institute</a> at Northeastern University and earned my Ph.D. under the supervision of <a href="https://www.networkscienceinstitute.org/people/alessandro-vespignani">Professor Alessandro Vespignani</a>. I also received my M.Sc. in Physics from Northeastern University and hold an Hon. Specialist degree with High Distinction in Astronomy & Physics, minor in Mathematics from the University of Toronto, Canada.
+  Before joining IDM, I was a member of the MOBS Lab in the <a href="https://www.networkscienceinstitute.org/">Network Science Institute</a> at Northeastern University and earned my Ph.D. under the supervision of <a href="https://www.networkscienceinstitute.org/people/alessandro-vespignani">Professor Alessandro Vespignani</a>, Director of the Network Science Institute and Sternberg Family Distinguished Professor. I also received my M.Sc. in Physics from Northeastern University and hold an Hon. Specialist degree with High Distinction in Astronomy & Physics, minor in Mathematics from the University of Toronto, Canada.
   </p>
 </div>
 
@@ -205,7 +210,7 @@ title: Personal Webpage
 <div class="docs-section" id="resume">
   <h4>Vitæ</h4>
 
-  <p>Full CV in <a href={{ "/assets/cv/DinaMistry_CV.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p>
+  <p>Full CV in <a href={{ "/assets/cv/DinaMistry_CV.pdf" | prepend: site.baseurl }} target="_blank">pdf</a> form.</p>
 
   <!-- The Timeline -->
   <ul class="timeline">
@@ -290,7 +295,7 @@ title: Personal Webpage
 
 <!-- ========== PERFORMANCES ========== -->
 <div class="docs-section" id="performances">
-  <h4>Performances</h4>
+  <h4>Personal</h4>
 
   <p>
   I have been playing the steel pan (native to the island nation of Trinidad and Tobago) since the age of 10, and performing publicly since the age of 14. From 14 through 18, I was a member of 3 performance bands, including 2 steel pan bands and a Jazz/Motown Ensemble. Most recently, I have joined the <a href="https://www.seattlesteelpanproject.com/">Seattle Steel Pan Project</a>. My main instruments are the Double Tenor and Tenor Pans, though I am also known to play the Double Seconds, 6 Bass, Treble Bass, and Cello Pans. In the summer, we perform at festivals and concerts throughout Seattle and the surrounding areas. If you're a Pacific North West local, you may recognize some of these events.  
@@ -307,7 +312,7 @@ title: Personal Webpage
 
 <!-- ========== ACKNOWLEDGEMENTS ========== -->
 <div class="docs-section" id="ack">
-<h4>Acknowledgement</h4>
+<h4>Acknowledgements</h4>
 <p>
 This website uses the website design and template by <a href="https://github.com/msaveski/www_personal">Martin Saveski</a>, and modifications from <a href="https://github.com/PaulJWright/pauljwright.github.io">Paul J Wright</a>.
 </p>
