--- a/index.html
+++ b/index.html
@@ -318,6 +318,9 @@ title: Personal Webpage
   I have been playing the steel pan (native to the island nation of Trinidad and Tobago) since the age of 10, and performing publicly since the age of 14. From 14 through 18, I was a member of 3 performance bands, including 2 steel pan bands and a Jazz/Motown Ensemble. Most recently, I have joined the <a href="https://www.seattlesteelpanproject.com/">Seattle Steel Pan Project</a>. My main instruments are the Double Tenor and Tenor Pans, though I am also known to play the Double Seconds, 6 Bass, Treble Bass, and Cello Pans. In the summer, we perform at festivals and concerts throughout Seattle and the surrounding areas. If you're a Pacific North West local, you may recognize some of these events.  
   </p>
 
+
+  <!-- <img src="/assets/performances/fremont_solstice_parade_2019.jpg" width="400px"><img src="/assets/performances/fremont_solstice_parade_2019.jpg" padding="60px" width="400px"> -->
+  <!-- <p></p> -->
   <ul>
     {% for pr in site.data.performances.performances %}
     <!-- <a class="navbar-link" href={{ "/index.html#bio" | prepend: site.baseurl }}>Bio</a> -->
