--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ title: Personal Webpage
 
 <!-- ========== RESUME ========== -->
 <div class="docs-section" id="resume">
-  <h4>Vitæ</h4>
+  <h4>Curriculum Vitæ</h4>
 
   <p>Full CV in <a href={{ "/assets/cv/DinaMistry_CV.pdf" | prepend: site.baseurl }} target="_blank">pdf</a> form.</p>
 
