schools and diversify update

--- a/index.html
+++ b/index.html
@@ -297,6 +297,17 @@ title: Personal Webpage
 <div class="docs-section" id="service">
   <h4>Leadership & Service</h4>
 
+  <p>I am involved with a number of initiatives within the network science research commmunity. I am currently Chair of the Society of Young Network Scientists (SYNS) and in 2019 I helped to found Diversify NetSci, a satellite at the flagship Network Science Conference aimed at building a more diverse and inclusive research community. 
+  </p>
+
+  <p>
+  Diversity, equity, and inclusion are important to me both as a woman of color and a first generation scientist. I have spent much of my higher education and research years as either the only woman in the room or the only person of color in the room (often times both). Learning and spending time in these environments has been lonely at times and often frustrating, though I am grateful for the wonderful friends and colleagues I have met along the way. I am also part of the first generation in my family to attend university or college. Growing up working class and the child of immigrants has colored the ways in which I view and experience the world. It has meant at times a dearth of opportunities, access, and guidance. With my work on diversity initiatives I am trying to highlight inequities and identify some of the best strategies out there for recruiting and retaining a more diverse science community. I believe we can do better and I am committed to helping build up other young scientists so that they can have more opportunities and success than the generation before them.
+  </p>
+
+  <p>
+  <a href="https://www.networkscienceinstitute.org/diversifynetsci2020">Diversify NetSci</a> is currently in it's 2nd year as a satellite, going live (virtually) on Friday September 18th and Saturday September 19th. Come join us and <a href="dina.c.mistry@gmail.com">get in contact</a> if you want to get involved with this initiative going forward.
+  </p>
+
   <ul>
     {% for sv in site.data.service.service %}
     <!-- <a class="navbar-link" href={{ "/index.html#bio" | prepend: site.baseurl }}>Bio</a> -->
