forgot about index page

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ title: Personal Webpage
 <div class="docs-section" id="bio">
   <h4>Bio</h4>
   <p>
-  I am a network scientist currently working in the Epidemiology team at the <a href="https://idmod.org/">Institute for Disease Modeling</a>, a part of the <a href="https://www.gatesfoundation.org/What-We-Do/Global-Health/Institute-for-Disease-Modeling">Bill & Melinda Gates Foundation</a>.
+  I am a Network Scientist currently working at Twitter as a Data Scientist in the Cortex Data Science Team working on the intersection of Identity & Profiles. Prior to that, I was a Postdoctoral Research Scientist working on network epidemiology and pandemic response modeling in the Epidemiology team at the <a href="https://idmod.org/">Institute for Disease Modeling</a>, a part of the <a href="https://www.gatesfoundation.org/What-We-Do/Global-Health/Institute-for-Disease-Modeling">Bill & Melinda Gates Foundation</a>.
 
-  I like studying people  and why we do what we do. In particular, I have spent a lot time thinking about how people interact in the physical world and how we can measure and model those interactions.
+  I like studying people  and why we do what we do. In particular, I have spent a lot time thinking about how people interact in the physical vs online worlds and how we can measure and model those interactions.
   My research has focused on characterizing and modeling the heterogeneity of social contact networks and mobility networks that are linked to the spread of infectious diseases and how this changes our understanding of disease dynamics. 
 
   </p>
@@ -25,15 +25,15 @@ title: Personal Webpage
   beyond rational logic. Fear, risk perception, individual and collective memory, social pressure, cost, and access to or lack of resources, all serve in the mental calculations behind our behavior.
 
 
-  During my current postdoctoral position I've been working on aspects of this by modeling human response to disease awareness as a result of social trust and collective memory in social networks, and showing how under the right conditions lessons learned from past epidemics can prevent future outbreaks.
+  During my postdoctoral position I worked on different aspects of this by modeling human response to disease awareness as a result of social trust and collective memory in social networks, and showing how under the right conditions lessons learned from past epidemics can prevent future outbreaks.
 
   <p>
-    During the current COVID-19 pandemic I have been working 
+    From early 2020 through to mid 2021, I worked on infectious disease modeling of the COVID-19 pandemic
     <!-- as a part of multiple research teams at IDM -->
     with
-     the rest of the IDM Research team and leading the social contact network modeling
+     the rest of the IDM Research team and lead the social contact network modeling
      <!-- multiple  -->
-     to help inform local and global policies to control and mitigate the spread of COVID-19. We are using a combination of compartmental and agent based model of infectious disease to models how proposed strategies might work in the real world and their tradeoffs. You can take a look at our various work on the <a href="https://covid.idmod.org/#/ResearchandReports">IDM Infohub</a>.
+     to help inform local and global policies to control and mitigate the spread of COVID-19. We used a combination of compartmental and agent based model of infectious disease to models how proposed strategies might work in the real world and their tradeoffs. You can take a look at our various work on the <a href="https://covid.idmod.org/#/ResearchandReports">IDM Infohub</a> or on my <a href="https://scholar.google.com/citations?user=D9bxgM4AAAAJ&hl=en">Google Scholar profile</a>.
  </p>
 
     <!-- Over the last few years I've been building my philosophy towards research and science. Experience has taught me that there are many ways to answer research questions. My philosophy is to take a fundamentally data-driven approach when it comes to questions about human behavior. Not only can data help to anchor your research questions, but it can also help with interpretation. -->
